--- a/student_02/contact.html
+++ b/student_02/contact.html
@@ -24,6 +24,34 @@
 <footer>
 Created by Me!
 </footer>
+    <br><br>
+  <br><br>
+<form>
+What would you like to do? <br>
+  <select name="topic">
+ 
+  <option value="pizza">
+    Donate $50,000
+    </option>
+  <option value="burrito">
+    Donate more than $50,000
+  </option>
+      <option value="Ask a Question">
+      </option>
+  </select><br><br>
+  Full Name <br>
+  <input type="text" name="name"><br>
+  <br>
+  Message <br>
+  <textarea name="message" rows="10" cols="30">
+  </textarea><br>
+  <br>
+  <br>
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+  <input type = "submit" value="Submit">
+  </form>
 </body>
 </head
 </html>
