--- a/student_17/about.html
+++ b/student_17/about.html
@@ -10,7 +10,7 @@
 <body>
 <header>
   <h1>
-I have nohing to tell you about me because people can hack my personal info. so thre
+I have nohing to tell you about me because people can hack my personal info. so thre SUBSCRIBE TO MULTYKID
   </h1> 
 </header>
 <nav>
