--- a/student_19/contactpage.html
+++ b/student_19/contactpage.html
@@ -51,18 +51,24 @@ What is your question? <br>
 
  
 
-  <option value="pizza">
+  <option value="Donations">
 
-    Pizza
+   Donations
 
     </option>
 
-  <option value="burrito">
+  <option value="Website Creations">
 
-    Burrito
+    Website Creations
 
   </option>
+ 
+    <option value="Issues">
 
+    Issues
+
+  </option>
+    
   </select><br><br>
 
   Full Name <br>
@@ -73,7 +79,7 @@ What is your question? <br>
 
   Message <br>
 
-  <textarea name="message" rows="10" cols="30">
+  <textarea name="message" rows="12" cols="50">
 
   </textarea><br>
 
