--- a/student_26/contact.html
+++ b/student_26/contact.html
@@ -12,11 +12,17 @@
 What is your question? <br>
   <select name="topic">
  
-  <option value="pizza">
-    Pizza
+   <option value="Potato">
+    Potato
     </option>
-  <option value="burrito">
-    Burrito
+   <option value="Potato">
+    Potato
+    </option>
+  <option value="Potato">
+    Potato
+    </option>
+  <option value="Potato">
+    Potato
   </option>
   </select><br><br>
   Full Name <br>
