--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -18,10 +18,13 @@
     <h1>Contact Us</h1>
  
 <form>
-What is your question? <br>
+What is your question/Message? <br>
   <select name="topic">
  
   <option value="About Me">
+    About Me
+    </option>
+   <option value="Opinion">
     About Me
     </option>
   <option value="Website Making">
@@ -38,7 +41,7 @@ What is your question? <br>
   Email <br>
   <input type="text" name="name"><br>
   <br>
-  Message <br>
+  Question/Message <br>
   <textarea name="message" rows="10" cols="30">
   </textarea><br>
   <br>
