--- a/student_33/contact.html
+++ b/student_33/contact.html
@@ -11,7 +11,73 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="mystyle.css">
-<title> Contact Us</title>
+<title> Contact Us</t<form>
+What is your question? <br>
+  <select name="topic">
+ 
+  <option value="pizza">
+    Pizza
+    </option>
+  <option value="burrito">
+    Burrito
+  </option>
+  </select><br><br>
+  Full Name <br>
+  <input type="text" name="name"><br>
+  <br>
+  Message <br>
+  <textarea name="message" rows="10" cols="30">
+  </textarea><br>
+  <br>
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+  <input type = "submit" value="Submit">
+  </form><form>
+What is your question? <br>
+  <select name="topic">
+ 
+  <option value="pizza">
+    Pizza
+    </option>
+  <option value="burrito">
+    Burrito
+  </option>
+  </select><br><br>
+  Full Name <br>
+  <input type="text" name="name"><br>
+  <br>
+  Message <br>
+  <textarea name="message" rows="10" cols="30">
+  </textarea><br>
+  <br>
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+  <input type = "submit" value="Submit">
+  </form><form>
+What is your question? <br>
+  <select name="topic">
+ 
+  <option value="pizza">
+    Pizza
+    </option>
+  <option value="burrito">
+    Burrito
+  </option>
+  </select><br><br>
+  Full Name <br>
+  <input type="text" name="name"><br>
+  <br>
+  Message <br>
+  <textarea name="message" rows="10" cols="30">
+  </textarea><br>
+  <br>
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+  <input type = "submit" value="Submit">
+  </form>itle>
 </head>
 
 <body>
