--- a/student_17/gallery.html
+++ b/student_17/gallery.html
@@ -25,6 +25,7 @@
     <img src = "https://i.imgflip.com/2hamkh.jpg">
       <img src = "https://media1.tenor.com/images/14f54e957116eb95939f9518baeed005/tenor.gif?itemid=9803539">
     <img src = "https://media1.tenor.com/images/f737a1a550fb7c4b8802d2b9e6be85a1/tenor.gif?itemid=3616218">
+    <img scr = "https://vignette.wikia.nocookie.net/youtube/images/0/01/Lachlan.jpg/revision/latest/scale-to-width-down/350?cb=20180618085905">
   </a>
 </nav>
 <footer>
