--- a/student_25/contact.html
+++ b/student_25/contact.html
@@ -64,6 +64,11 @@ What is your question? <br>
   <option value="Overwatch">
     Overwatch
   </option>
+    <option value="STEEP">
+    STEEP
+   </option>
+    <option value="Fortnite">
+    Fortnite
   </select><br><br>
   Full Name <br>
   <input type="text" name="name"><br>
