--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -18,7 +18,7 @@
     <h1>Contact Us</h1>
  
 <form>
-What is your question/Message? <br>
+What is your question/message? <br>
   <select name="topic">
  
   <option value="About Me">
