--- a/example/contact.html
+++ b/example/contact.html
@@ -58,9 +58,20 @@ What is your question? <br>
   <textarea name="message" rows="10" cols="30">
   </textarea><br>
   <br>
+
+  
+  <br><br>
   <input type ="checkbox" name = "subscribe" value = "Subscribe">
   Please add me to the mailing list!
   <br><br>
+    When do you want it by?
+  <input type="radio" value="radio">MOnday
+  <br>
+   <input type="radio" value="radio">Tuesday
+  <br>
+   <input type="radio" value="radio">Wednesday
+  <br>
+  
   <input type = "submit" value="Submit">
   </form>
 </body>
