--- a/student_14/about.html
+++ b/student_14/about.html
@@ -8,7 +8,7 @@
 </header>
   <h2> California Rolls are NOT Sushi </h2>
 <nav>
-  <ul>
+  <ul class = "nav">
     <li><a href = "index.html"> Home </a></li>
     <li><a href = "about.html"> About Us </a></li>
     <li><a href = "gallery.html"> Gallery </a></li>
