--- a/student_02/contact.html
+++ b/student_02/contact.html
@@ -36,7 +36,8 @@ What would you like to do? <br>
   <option value="burrito">
     Donate more than $50,000
   </option>
-      <option value="Ask a Question">
+      <option value="ask">
+          Ask a question
       </option>
   </select><br><br>
   Full Name <br>
