--- a/student_17/about.html
+++ b/student_17/about.html
@@ -62,7 +62,7 @@ I have nohing to tell you about me because people can hack my personal info. so 
 
 <div class="row">
   <div class="column left" style="background-color:#aaa;">
-    <h2>Column 1</h2>
+    <h2>Imags</h2>
     <p><h3>
     Yo, yo, yo, yo, yo, howsit dowin chups I have a good life this image should say it all.
     <img src = "https://media.tenor.com/images/5aa61ab3a7a32cbcb88771984b7be8ca/tenor.gif">
@@ -70,7 +70,7 @@ I have nohing to tell you about me because people can hack my personal info. so 
   </h3> </p>
   </div>
   <div class="column right" style="background-color:#bbb;">
-    <h2>Column 2</h2>
+    <h2>DAily calendar</h2>
     <p>
 Hey my name is what it said last time and i dont like repating myself have this text. Remember to sumbsciribe to Multykid and PandaGamer258K9 on youtube
 <br>
