--- a/student_19/contactpage.html
+++ b/student_19/contactpage.html
@@ -84,7 +84,31 @@ What is your question? <br>
   </textarea><br>
 
   <br>
+<br><br>
 
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+
+  Please add me to the mailing list!
+
+  <br><br>
+
+    When do you want it by?
+
+  <input type="radio" value="radio">MOnday
+
+  <br>
+
+   <input type="radio" value="radio">Tuesday
+
+  <br>
+
+   <input type="radio" value="radio">Wednesday
+
+  <br>
+
+  
+
+  <input type = "submit" value="Submit">
   
 
   </form>
