--- a/student_14/contact.html
+++ b/student_14/contact.html
@@ -7,7 +7,7 @@
   <h1> Welcome... I guess... </h1>
 </header>
 <nav>
-  <ul>
+  <ul class = "nav">
     <li><a href = "index.html"> Home </a></li>
     <li><a href = "about.html"> About Us </a></li>
     <li><a href = "gallery.html"> Gallery </a></li>
