--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -27,10 +27,10 @@
   <div>
     <ul class= "nav">
       
-      <li><a href = "example.html"> Home Page </a></li>
-      <li><a href = "about.html"> About Us </a></li>
-      <li><a href = "gallery.html"> Gallery </a></li>
-      <li><a href = "contact.html"> Contact Us </a></li>
+      <li><a href = "Index.html"> Home Page </a></li>
+      <li><a href = "AboutMe.html"> About Us </a></li>
+      <li><a href = "Gallery.html"> Gallery(eet) </a></li>
+      <li><a href = "Contact.html"> Contact Us </a></li>
 
     </ul>
   </div>
