--- a/example/contact.html
+++ b/example/contact.html
@@ -66,11 +66,11 @@ What is your question? <br>
   <br><br>
     When do you want it by?
   <br>
-  <input type="radio" value="radio">MOnday
+  <input type="radio" name = "day" value="mon">MOnday
   <br>
-   <input type="radio" value="radio">Tuesday
+   <input type="radio" name="day" value="tue">Tuesday
   <br>
-   <input type="radio" value="radio">Wednesday
+   <input type="radio" name="day" value="wed">Wednesday
   <br>
   
   <input type = "submit" value="Submit">
