--- a/student_17/index.html
+++ b/student_17/index.html
@@ -29,11 +29,11 @@
 <body>
   <div class="row">
   <div class="column left" style="background-color:#bba;">
-    <h2>Column 1</h2>
+    <h2>Sm Txt</h2>
     <p>Yo sup flex tup</p>
   </div>
   <div class="column right" style="background-color:#aah;">
-    <h2>Column 2</h2>
+    <h2>Suum Text</h2>
     <p>I dunno wa else to say so CRAKY</p>
   </div>
 </div>
