--- a/student_15/gallery.html
+++ b/student_15/gallery.html
@@ -8,10 +8,10 @@
     <img src = "https://img.buzzfeed.com/buzzfeed-static/static/2016-12/14/13/asset/buzzfeed-prod-fastlane01/sub-buzz-24232-1481739559-7.jpg">
   </a>
   <a href = "/">
-    <img src = "https://bpb.opendns.com/b/https/www.facebook.com/Disney/">
+    <img src = "https://www.complex.com/pop-culture/best-disney-animated-movies/">
   </a>
   <a href = "/">
-    <img src = "https://www.mlb.com/baseball-tomorrow-fund">
+    <img src = "https://www.baseballprospectus.com/news/article/39305/baseball-therapy-ready-player-one/">
   </a>
 </header>
   </body>
