--- a/student_14/index.html
+++ b/student_14/index.html
@@ -24,11 +24,11 @@ Created by Hajime Inc.
 <div class="row">
   <div class="column left" style="background-color:#aaa;">
     <h2>Column 1</h2>
-    <p>Jello persona yo wasap</p>
+    <p>Hi...</p>
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Column 2</h2>
-    <p>Anoher wassap I dunno wa else to se</p>
+    <p>Welcome to your worst nightmare</p>
   </div>
 </div>
 
