--- a/student_13/gallery.html
+++ b/student_13/gallery.html
@@ -11,6 +11,8 @@
     <h1> Get Free V-Bucks Here </h1>
     <h1> Someone I like to listen to is Marshmello <h1>
     <h1> I just started playing Apex Legends <h1>
+    <h1> I also suport the LA Rams <h1>
+  <img src = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjzq_HO_8jgAhWYHjQIHchhDkkQjRx6BAgBEAU&url=https%3A%2F%2Fdeadline.com%2F2016%2F07%2Fe-hollywood-football-los-angeles-rams-team-move-1201782934%2F&psig=AOvVaw3Z7lF1A8O-j8RchdCcHoIz&ust=1550706924867644">
   <img src = "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjUwLDc_cjgAhXIrFQKHQ5FCV4QjRx6BAgBEAU&url=https%3A%2F%2Fwww.dexerto.com%2Fapex-legends%2Fapex-legends-gold-items-attachments-378886&psig=AOvVaw1A1wCxgnyM8gDgAauyob2Q&ust=1550706411647747 ">
 </header>
 <nav>
