--- a/student_19/contactpage.html
+++ b/student_19/contactpage.html
@@ -94,21 +94,26 @@ What is your question? <br>
 
     When do you want it by?
 
-  <input type="radio" value="radio">MOnday
+  <br>
+
+  <input type="radio" name = "day" value="mon">MOnday
 
   <br>
 
-   <input type="radio" value="radio">Tuesday
+   <input type="radio" name="day" value="tue">Tuesday
 
   <br>
 
-   <input type="radio" value="radio">Wednesday
+   <input type="radio" name="day" value="wed">Wednesday
 
   <br>
 
   
 
   <input type = "submit" value="Submit">
+  
+
+
   
 
   </form>
