--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -27,7 +27,7 @@
   <div>
     <ul class= "nav">
       
-      <li><a href = "Index.html"> Home Page </a></li>
+      <li><a href = "index.html"> Home Page </a></li>
       <li><a href = "AboutMe.html"> About Us </a></li>
       <li><a href = "Gallery.html"> Gallery(eet) </a></li>
       <li><a href = "Contact.html"> Contact Us </a></li>
