--- a/student_19/contactpage.html
+++ b/student_19/contactpage.html
@@ -88,15 +88,15 @@ What is your question? <br>
 
   <input type ="checkbox" name = "subscribe" value = "Subscribe">
 
-  Please add me to the mailing list!
+   Add me to the mailing list!
 
   <br><br>
 
-    When do you want it by?
+    When do you want the answer by?
 
   <br>
 
-  <input type="radio" name = "day" value="mon">MOnday
+  <input type="radio" name = "day" value="mon">Monday
 
   <br>
 
@@ -108,8 +108,21 @@ What is your question? <br>
 
   <br>
 
-  
+  <input type="radio" name = "day" value="thu">Thursday
 
+  <br>
+  
+  <input type="radio" name = "day" value="fri">Friday
+
+  <br>
+
+  <input type="radio" name = "day" value="sat">Saturday
+
+  <br>
+  
+  <input type="radio" name = "day" value="sun">Sunday
+
+  <br>
   <input type = "submit" value="Submit">
   
 
