--- a/student_02/contact.html
+++ b/student_02/contact.html
@@ -4,10 +4,9 @@
     <link rel - "stylesheet" type="text/css" href = "mystyle.css">
 <body>
   </head>
+    <font color="green">
 <header>
-<a href = "/">
-<img src="picture.png">
-</a>
+    <h1> Contact </h1>
     <form>
 What would you like to do? <br>
   <select name="topic">
@@ -32,11 +31,17 @@ What would you like to do? <br>
   <br>
   <input type ="checkbox" name = "subscribe" value = "Subscribe">
   Please add me to the mailing list!
-  <br><br>
+  <br>
+        <br>
+  <input type="radio" name = "day" value="mon">MOnday
+  <br>
+   <input type="radio" name="day" value="tue">Tuesday
+  <br>
+   <input type="radio" name="day" value="wed">Wednesday
+  <br>
   <input type = "submit" value="Submit">
+        
   </form>
-<font color="green">
-<h1> Contact Me </h1>
   <h2> Email: iaaa5655194166@gmail.com <h2>
 </header>
 <nav>
