--- a/student_17/contact.html
+++ b/student_17/contact.html
@@ -44,6 +44,20 @@ What is your question? <br>
   <textarea name="message" rows="10" cols="30">
   </textarea><br>
   <br>
+    <br><br>
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+    When do you want it by?
+  <br>
+  <input type="radio" name = "day" value="mon">MOnday
+  <br>
+   <input type="radio" name="day" value="tue">Tuesday
+  <br>
+   <input type="radio" name="day" value="wed">Wednesday
+  <br>
+  
+  <input type = "submit" value="Submit">
   
   </form>
 <footer>
