--- a/student_14/index.html
+++ b/student_14/index.html
@@ -23,11 +23,11 @@ Created by Hajime Inc.
   
 <div class="row">
   <div class="column left" style="background-color:#aaa;">
-    <h2>Column 1</h2>
+    <h2>Hajime Inc.</h2>
     <p>Hi...</p>
   </div>
   <div class="column right" style="background-color:#bbb;">
-    <h2>Column 2</h2>
+    <h2>Stupid Crap Since 1745</h2>
     <p>Welcome to your worst nightmare</p>
   </div>
 </div>
