--- a/example/contact.html
+++ b/example/contact.html
@@ -44,7 +44,7 @@
 What is your question? <br>
   <select name="topic">
  
-  <option value="pizza">
+  <option value="No, i don't want that">
     Pizza
     </option>
   <option value="burrito">
