--- a/student_09/index.html
+++ b/student_09/index.html
@@ -11,10 +11,10 @@
 <nav>
   <ul>
     <li><a href = "home.html"> Home </a></li>
-    <li><a href = "boutme.html"> About Us </a></li>
+    <li><a href = "boutme.html"> About Me </a></li>
     <li><a href = "gallery.html"> Gallery </a></li>
     <li><a href = "contact.html"> Contact Us </a></li>
-    <li><a href = "hi.html">Get to know me  </a></li>
+    <li><a href = "hi.html">Know me more!  </a></li>
     <li><a href = "thanksgiving.html"> My thanksgiving page </a></li>
  </ul>
 </nav>
@@ -31,7 +31,7 @@
 <p3>Congrats you have discovered your secret talent: Intylliigance. I've got some too you know i could even spell it. I T see i can spell too</p3>
 <br>
  <br>
-<p4>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great. if you don't too bad but guess what you probably just wasted like five to fifty minutes of your life here</p4>
+<p4>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great if you don't too bad but you probably just wasted like five to fifty minutes of your life here</p4>
 <br>
  <br>
  <footer>
