--- a/student_13/gallery.html
+++ b/student_13/gallery.html
@@ -13,7 +13,7 @@
     <h1> I just started playing Apex Legends <h1>
     <h1> I also suport the LA Rams <h1>
   <img src = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjzq_HO_8jgAhWYHjQIHchhDkkQjRx6BAgBEAU&url=https%3A%2F%2Fdeadline.com%2F2016%2F07%2Fe-hollywood-football-los-angeles-rams-team-move-1201782934%2F&psig=AOvVaw3Z7lF1A8O-j8RchdCcHoIz&ust=1550706924867644">
-  <img src = "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjUwLDc_cjgAhXIrFQKHQ5FCV4QjRx6BAgBEAU&url=https%3A%2F%2Fwww.dexerto.com%2Fapex-legends%2Fapex-legends-gold-items-attachments-378886&psig=AOvVaw1A1wCxgnyM8gDgAauyob2Q&ust=1550706411647747 ">
+  <img src = "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjwuvetgMngAhV9GjQIHY6hCQkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.freep.com%2Fstory%2Fnews%2Fnation%2F2019%2F02%2F18%2Fapex-legends-guide-tips-characters%2F2909099002%2F&psig=AOvVaw2FVyTIO8GNFEFBX6RbwIT9&ust=1550707118077930">
 </header>
 <nav>
   <ul>
