--- a/student_15/about.html
+++ b/student_15/about.html
@@ -76,7 +76,16 @@ This is my favorite video <a href= "http://www.youtube.com/watch?v=HCckoploKxg">
 <li>Clash Royale</li>
 <li>Minecraft</li>
 </ul>
-  
+     <div>
+    <ul class= "nav">
+      
+      <li><a href = "index.html"> Home Page </a></li>
+      <li><a href = "about.html"> About Us </a></li>
+      <li><a href = "gallery.html"> Gallery </a></li>
+      <li><a href = "contact.html"> Contact Us </a></li>
+
+    </ul>
+  </div>
 <marquee>This is made by Hank.inc a Pineapple on Pizza company</marquee>
 <body>
 </html>
