--- a/student_19/contactpage.html
+++ b/student_19/contactpage.html
@@ -88,7 +88,7 @@ What is your question? <br>
 
   <input type ="checkbox" name = "subscribe" value = "Subscribe">
 
-   Add me to the mailing list!
+   Add me to the mailing list
 
   <br><br>
 
