--- a/student_14/contact.html
+++ b/student_14/contact.html
@@ -41,6 +41,18 @@ What is your question? <br>
   </form>
   
   </form>
+  <br><br>
+    When do you want it by?
+  <br>
+  <input type="radio" name = "day" value="mon">MOnday
+  <br>
+   <input type="radio" name="day" value="tue">Tuesday
+  <br>
+   <input type="radio" name="day" value="wed">Wednesday
+  <br>
+  
+  <input type = "submit" value="Submit">
+  </form>
 <footer>
 Created by Hajime Inc. 
 </footer>
