--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -48,6 +48,23 @@ What is your question/message? <br>
   <input type ="checkbox" name = "subscribe" value = "Subscribe">
   Please add me to the mailing list!
   <br><br>
+    When do you want it by?
+  <br>
+  <input type="radio" name = "day" value="mon">Monday
+  <br>
+   <input type="radio" name="day" value="tue">Tuesday
+  <br>
+   <input type="radio" name="day" value="wed">Wednesday
+  <br>
+ <input type="radio" name = "day" value="thu">Thursday
+  <br>
+  <input type="radio" name = "day" value="fri">Friday
+  <br>
+  <input type="radio" name = "day" value="sat">Saturday
+  <br>
+  <input type="radio" name = "day" value="sun">Sunday
+  <br>
+  <br><br>
   <input type = "submit" value="Submit">
   </form>
 </body>
