--- a/student_14/contact.html
+++ b/student_14/contact.html
@@ -44,11 +44,11 @@ What is your question? <br>
   <br><br>
     When do you want it by?
   <br>
-  <input type="radio" name = "day" value="mon">MOnday
+  <input type="radio" name = "day" value="mon">Saturday
   <br>
-   <input type="radio" name="day" value="tue">Tuesday
+   <input type="radio" name="day" value="tue">Saturday
   <br>
-   <input type="radio" name="day" value="wed">Wednesday
+   <input type="radio" name="day" value="wed">Aaaaand Saturday
   <br>
   
   <input type = "submit" value="Submit">
