--- a/student_28/contact.html
+++ b/student_28/contact.html
@@ -22,7 +22,7 @@
 What is your question? <br>
   <select name="topic">
  
-  <option value="pizza">
+  <option value="No, i don't want that">
     Pizza
     </option>
   <option value="burrito">
@@ -35,114 +35,23 @@ What is your question? <br>
   Message <br>
   <textarea name="message" rows="10" cols="30">
   </textarea><br>
-  <br>
-  <input type ="checkbox" name = "subscribe" value = "Subscribe">
-  Please add me to the mailing list!
-  <br><br>
-  <input type = "submit" value="Submit">
-  </form>
-
-
-</body>
-
-</html>
-
--->
-
-<html>
-
-<head>
-
-  <link rel="stylesheet" type="text/css" href="mystyle.css">
-
-<title> Contact Us</title>
-
-</head>
-
-
-
-<body>
-
-
-
-
-
-  <div class="header">
-
-    <a href="example.html">
-
-    </a>
-
-    <h1>Contact Us</h1>
-
-
-
-  </div>
-
-    
-
-  <div>
-
-    <ul class= "nav">
-
-      
-
-      <li><a href = "example.html"> Home Page </a></li>
-
-      <li><a href = "about.html"> About Us </a></li>
-
-      <li><a href = "gallery.html"> Gallery </a></li>
-
-      <li><a href = "contact.html"> Contact Us </a></li>
-
-
-
-    </ul>
-
-  </div>
-
-  <br><br>
-
-  <br><br>
-
-<form>
-
-What is your question? <br>
-
-  <select name="topic">
-
- 
-
-  <option value="pizza">
-
-    Pizza
-
-    </option>
-
-  <option value="burrito">
-
-    Burrito
-
-  </option>
-
-  </select><br><br>
-
-  Full Name <br>
-
-  <input type="text" name="name"><br>
-
-  <br>
-
-  Message <br>
-
-  <textarea name="message" rows="10" cols="30">
-
-  </textarea><br>
-
   <br>
 
   
-
+  <br><br>
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+    When do you want it by?
+  <br>
+  <input type="radio" name = "day" value="mon">MOnday
+  <br>
+   <input type="radio" name="day" value="tue">Tuesday
+  <br>
+   <input type="radio" name="day" value="wed">Wednesday
+  <br>
+  
+  <input type = "submit" value="Submit">
   </form>
 
 </body>
