--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -61,6 +61,14 @@ What is your question? <br>
    <input type ="checkbox" name = "subscribe" value = "Subscribe">
   anonomus?
   <br><br>
+   When do you want it by?
+  <br>
+  <input type="radio" name = "day" value="mon">MOnday
+  <br>
+   <input type="radio" name="day" value="tue">Tuesday
+  <br>
+   <input type="radio" name="day" value="wed">Wednesday
+  <br>
   <input type = "submit" value="Submit">
   </form>
 </body>
