--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -19,6 +19,8 @@
  
 <form>
 What is your question/message? <br>
+<br><br>
+  About What?
   <select name="topic">
  
   <option value="About Me">
@@ -49,7 +51,7 @@ What is your question/message? <br>
   Please add me to the mailing list!
   <br><br>
     When do you want it by?
-  <br>
+  <br><br>
   <input type="radio" name = "day" value="mon">Monday
   <br>
    <input type="radio" name="day" value="tue">Tuesday
