--- a/student_26/contact.html
+++ b/student_26/contact.html
@@ -35,6 +35,13 @@ What is your question? <br>
   <input type ="checkbox" name = "subscribe" value = "Subscribe">
   Please add me to the mailing list!
   <br><br>
+   <br>
+  <input type="radio" name = "day" value="mon">Sunday
+  <br>
+   <input type="radio" name="day" value="tue">Saturday
+  <br>
+   <input type="radio" name="day" value="wed">Friday
+  <br>
   <input type = "submit" value="Submit">
   </form>
 <footer>
