--- a/student_14/contact.html
+++ b/student_14/contact.html
@@ -21,10 +21,10 @@ What is your question? <br>
   <select name="topic">
  
   <option value="pizza">
-    california rolls (boo)
+    Ramen
     </option>
   <option value="burrito">
-    SUSHI
+    Sushi
   </option>
   </select><br><br>
   Full Name <br>
