--- a/student_17/about.html
+++ b/student_17/about.html
@@ -5,6 +5,7 @@
 
 <title>
   About Me
+	<img src = "https://lh3.googleusercontent.com/-UAnF7oloRSw/XFzhMdVdCiI/AAAAAAAAACM/7iUk8egHgqgcZXtJcNU43xT1F6khKNBPQCEwYBhgL/w140-h77-p/youtube%2Bimage.png">
   </title>
 </head>
 <body>
