--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -20,20 +20,20 @@
 <form>
 What is your question/message? <br>
 <br><br>
-  About What?
+  About
   <select name="topic">
  
   <option value="About Me">
-    About Me
+    Me
     </option>
    <option value="Opinion">
-    About Me
+    your opinion
     </option>
   <option value="Website Making">
     Website Making
   </option>
    <option value="Other">
-    Other
+    something else
   </option>
  </select><br><br>
   Full Name <br>
