--- a/student_17/gallery.html
+++ b/student_17/gallery.html
@@ -1,7 +1,10 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="mystyle.css">
-  <title> Gallery </title>
+  <title> 
+    Gallery
+    <img src = "https://lh3.googleusercontent.com/-UAnF7oloRSw/XFzhMdVdCiI/AAAAAAAAACM/7iUk8egHgqgcZXtJcNU43xT1F6khKNBPQCEwYBhgL/w140-h77-p/youtube%2Bimage.png">
+  </title>
 </head>
 <body>
 <header>
