--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -30,7 +30,7 @@ What is your question/message? <br>
     your opinion
     </option>
   <option value="Website Making">
-    Website Making
+    website making
   </option>
    <option value="Other">
     something else
