--- a/student_17/index.html
+++ b/student_17/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="mystyle.css">
-  <title> Index </title>
+  <title>
+    Index 
+    
+        roosevelt-coding.github.io/student_17/gallery.html
+      
+  </title>
   <style>
     * {
   box-sizing: border-box;
