--- a/student_16/Contact.html
+++ b/student_16/Contact.html
@@ -61,13 +61,13 @@ What is your question? <br>
    <input type ="checkbox" name = "subscribe" value = "Subscribe">
   anonomus?
   <br><br>
-   When do you want it by?
+  Which is better?
   <br>
-  <input type="radio" name = "day" value="mon">MOnday
+  <input type="radio" name = "day" value="com">COMMUNISM
   <br>
-   <input type="radio" name="day" value="tue">Tuesday
+   <input type="radio" name="day" value="mue">MEMES
   <br>
-   <input type="radio" name="day" value="wed">Wednesday
+   <input type="radio" name="day" value="nism">YOUUBE
   <br>
   <input type = "submit" value="Submit">
   </form>
