--- a/student_09/index.html
+++ b/student_09/index.html
@@ -6,8 +6,9 @@
 <header>
     <img src =  />
   </a>
-  <h1> A cool  </h1>
-</header>
+  <h1> This is a Website. Mind-blowing right?  </h1>
+<h2>Places you may visit while you are here.</h2>
+ </header>
 <nav>
   <ul>
     <li><a href = "home.html"> Home </a></li>
@@ -34,6 +35,7 @@
 <p4>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great if you don't too bad but you probably just wasted like five to fifty minutes of your life here</p4>
 <br>
  <br>
+ <p5> The links up </p5>
  <footer>
 Created by Me!
 </footer>
