--- a/student_09/index.html
+++ b/student_09/index.html
@@ -19,23 +19,17 @@
     <li><a href = "thanksgiving.html"> My thanksgiving page </a></li>
  </ul>
 </nav>
-<h1> poeple who are viewing this are poeple who have nothing to do 
- h1::before  {
-  content: "😜";
-} If you not Bored plz leave :I Totally bieng serious there</h1>
-<h2>Welcome bordies here you will learn about me a fellow memeber of your team 
- h2::before  {
-  content: "😊";
-} but letting you know ....</h2>
-<h3>This is the <b>coolest</b> site ever! only if you didn't already know :) Which you should've :( </h3>
+<h1> poeple who are viewing this are poeple who have nothing to do. <p>😜</p>If you not Bored plz leave :I Totally bieng serious there<p>😊</p></h1>
+<h2>Welcome bordies here you will learn about me a fellow memeber of your team. but letting you know ....</h2>
+<h3>This is the <b>BEST</b> site ever! only if you didn't already know :) Which you should've :( </h3>
 <h4>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :) </h4>
-<p1>Raed this number (plz do its easier than you think) 847.98768760 * 107.6865669</p1>
+<p1>Raed this number (plz do its easier than you think) 847.98768760 * 107.6865669. You better have read that </p1>
 <br>
  <br>
  <p2>AHAAAA! I caught you. you read the entire thing didn't you ? Us bordies shall never follow what others tell us to do. you have dishonored us '-'. You should be ashamed. NOT!</p2>
 <br>
  <br>
-<p3>Congrats you have discovered your secret talent: Intylliigance. I've got some too you know i could even spell it. I T see i can spell too</p3>
+<p3>Congrats you have discovered your secret talent: Intylliijance. I've got some too you know i could even spell it. I T see i can spell too</p3>
 <br>
  <br>
 <p4>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great if you don't too bad but you probably just wasted like five to fifty minutes of your life here</p4>
