--- a/student_09/index.html
+++ b/student_09/index.html
@@ -19,7 +19,7 @@
     <li><a href = "thanksgiving.html"> My thanksgiving page </a></li>
  </ul>
 </nav>
-<h1> poeple who are viewing this are poeple who have nothing to do. <p>😜</p> If you not Bored plz leave :I Totally bieng serious there<p>😊</p></h1>
+<h1> poeple who are viewing this are poeple who have nothing to do. <p>😜If you not Bored plz leave :I Totally bieng serious there<p>😊</h1>
 <h2>Welcome bordies here you will learn about me a fellow memeber of your team. but letting you know ....</h2>
 <h3>This is the <b>BEST</b> site ever! only if you didn't already know :) Which you should've :( </h3>
 <h4>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :) </h4>
