--- a/student_09/index.html
+++ b/student_09/index.html
@@ -9,6 +9,13 @@
   <h1> This is a Website. Mind-blowing right?  </h1>
 <h2>Places you may visit while you are here.</h2>
  </header>
+ <style type="text/css">
+body{
+	border-style: dotted;
+	border-width: thin;
+	border-color: purple;
+	background-color: blue;}
+</style>
 <nav>
   <ul>
     <li><a href = "home.html"> Home </a></li>
