--- a/student_09/index.html
+++ b/student_09/index.html
@@ -9,13 +9,6 @@
   <h1> This is a Website. Mind-blowing right?  </h1>
 <h2>Places you may visit while you are here.</h2>
  </header>
- <style type="text/css">
-body{
-	border-style: dotted;
-	border-width: thin;
-	border-color: purple;
-	background-color: blue;}
-</style>
 <nav>
   <ul>
     <li><a href = "home.html"> Home </a></li>
@@ -43,8 +36,16 @@ body{
 <br>
  <br>
  <p5> The links up are some other websites I made so make sure to check them out👍.</p5>
- <footer>
-Created by Me!
+ <p6>
+ <style type="text/css">
+body{
+	border-style: dotted;
+	border-width: thin;
+	border-color: purple;
+	background-color: blue;}
+</style></p6>
+<footer>
+Created by an alien!
 </footer>
 </body>
 </html>
