--- a/student_09/index.html
+++ b/student_09/index.html
@@ -42,7 +42,7 @@ body{
 	border-style: dotted;
 	border-width: thin;
 	border-color: purple;
-	background-color: blue;}
+	background-color: cayan;}
 </style></p6>
 <footer>
 Created by an alien!
