--- a/student_09/index.html
+++ b/student_09/index.html
@@ -3,8 +3,7 @@
  <link rel="stylesheet" type="text/css" href="style.css">  
 </head>
 <body>
-<header>
-    <img src =  />
+<header
   </a>
   <h1> This is a Website. Mind-blowing right?  </h1>
 <h2>Places you may visit while you are here.</h2>
@@ -22,7 +21,7 @@
 <h1> poeple who are viewing this are poeple who have nothing to do.😜If you not Bored plz leave 😑Totally bieng serious there😊</h1>
 <h2>Welcome bordies here you will learn about me a fellow memeber of your team😎. but letting you know ....</h2>
 <h3>This is the 🤪<b>BEST</b>🤪 site ever! only if you didn't already know 😁 Which you should've 😔 </h3>
-<h4>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho :)😋 </h4>
+<h4>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho😋 </h4>
 <p1>Raed this number (plz do its easier than you think) 847.98768760 * 107.6865669. You better have read that </p1>
 <br>
  <br>
