--- a/student_09/index.html
+++ b/student_09/index.html
@@ -18,30 +18,31 @@
     <li><a href = "thanksgiving.html"> My thanksgiving page </a></li>
  </ul>
 </nav>
-<h1> poeple who are viewing this are poeple who have nothing to do.😜If you not Bored plz leave 😑Totally bieng serious there😊</h1>
-<h2>Welcome bordies here you will learn about me a fellow memeber of your team😎. but letting you know ....</h2>
-<h3>This is the 🤪<b>BEST</b>🤪 site ever! only if you didn't already know 😁 Which you should've 😔 </h3>
-<h4>So..... to see if you really are a bordy or not you have to take a test. Not Literary tho😋 </h4>
-<p1>Raed this number (plz do its easier than you think) 847.98768760 * 107.6865669. You better have read that </p1>
+<h1> <font color="white"> poeple who are viewing this are poeple who have nothing to do.😜If you not Bored plz leave 😑Totally bieng serious there😊</h1></font>
+<h2><font color="white"> Welcome bordies here you will learn about me a fellow memeber of your team😎. but letting you know ....</h2></font>
+<h3><font color="white"> This is the 🤪<b>BEST</b>🤪 site ever! only if you didn't already know 😁 Which you should've 😔 </h3></font>
+<h4><font color="white"> So..... to see if you really are a bordy or not you have to take a test. Not Literary tho😋 </h4></font>
+<p1><font color="white"> Raed this number (plz do its easier than you think) 847.98768760 * 107.6865669. You better have read that </p1></font>
 <br>
  <br>
- <p2>AHAAAA! I caught you. you read the entire thing didn't you ? Us bordies shall never follow what others tell us to do. you have dishonored us 😑😔😟. You should be ashamed. NOT!😝</p2>
+ <p2><font color="white"> AHAAAA! I caught you. you read the entire thing didn't you ? Us bordies shall never follow what others tell us to do. you have dishonored us 😑😔😟. You should be ashamed. NOT!😝</p2></font>
 <br>
  <br>
-<p3>Congrats you have discovered your secret talent: Intylliijance🤓. I've got some too you know i could even spell it🐝. I T see i can spell too</p3>
+<p3><font color="white"> Congrats you have discovered your secret talent: Intylliijance🤓. I've got some too you know i could even spell it🐝. I T see i can spell too</p3></font>
 <br>
  <br>
-<p4>Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great if you don't too bad but you probably just wasted like five to fifty minutes of your life here</p4>
+<p4><font color="white"> Ok so basically (if you haven't figured it out yet) this is a website about me as a person and what i do if you like it great if you don't too bad but you probably just wasted like five to fifty minutes of your life here</p4></font>
 <br>
  <br>
- <p5> The links up are some other websites I made so make sure to check them out👍.</p5>
+ <p5><font color="white"> The links up are some other websites I made so make sure to check them out👍.</font></p5>
  <p6>
  <style type="text/css">
 body{
 	border-style: dotted;
-	border-width: thin;
-	border-color: purple;
-	background-color: cayan;}
+	border-width: thick;
+	border-color: white;
+	background-color: black;
+	 }
 </style></p6>
 <footer>
 Created by an alien!
