--- a/student_09/index.html
+++ b/student_09/index.html
@@ -5,9 +5,10 @@
 <body>
 <header
   </a>
-  <h1> This is a Website. Mind-blowing right?  </h1>
-<h2>Places you may visit while you are here.</h2>
+  <font color="white"> This is a Website. Mind-blowing right?  </h1></font>
+<font color="white">Places you may visit while you are here.</h2></font>
  </header>
+<font color="white">
 <nav>
   <ul>
     <li><a href = "home.html"> Home </a></li>
@@ -18,6 +19,7 @@
     <li><a href = "thanksgiving.html"> My thanksgiving page </a></li>
  </ul>
 </nav>
+	</font>
 <h1> <font color="white"> poeple who are viewing this are poeple who have nothing to do.😜If you not Bored plz leave 😑Totally bieng serious there😊</h1></font>
 <h2><font color="white"> Welcome bordies here you will learn about me a fellow memeber of your team😎. but letting you know ....</h2></font>
 <h3><font color="white"> This is the 🤪<b>BEST</b>🤪 site ever! only if you didn't already know 😁 Which you should've 😔 </h3></font>
