--- a/student_09/index.html
+++ b/student_09/index.html
@@ -5,21 +5,21 @@
 <body>
 <header
   </a>
-  <font color="white"> This is a Website. Mind-blowing right?  </h1></font>
-<font color="white">Places you may visit while you are here.</h2></font>
+  <font color="white"><h1>This is a Website. Mind-blowing right?  </h1></font>
+<font color="white"><h2>Places you may visit while you are here.</h2></font>
  </header>
-<font color="white">
+
 <nav>
   <ul>
-    <li><a href = "home.html"> Home </a></li>
-    <li><a href = "boutme.html"> About Me </a></li>
-    <li><a href = "gallery.html"> Gallery </a></li>
-    <li><a href = "contact.html"> Contact Us </a></li>
-    <li><a href = "hi.html">Know me more!  </a></li>
-    <li><a href = "thanksgiving.html"> My thanksgiving page </a></li>
+    <font color="white"><li><a href = "home.html"> Home </a></li></font>
+    <font color="white"><li><a href = "boutme.html"> About Me </a></li></font>
+    <font color="white"><li><a href = "gallery.html"> Gallery </a></li></font>
+    <font color="white"><li><a href = "contact.html"> Contact Us </a></li></font>
+    <font color="white"><li><a href = "hi.html">Know me more!  </a></li></font>
+    <font color="white"><li><a href = "thanksgiving.html"> My thanksgiving page </a></li></font>
  </ul>
 </nav>
-	</font>
+	
 <h1> <font color="white"> poeple who are viewing this are poeple who have nothing to do.😜If you not Bored plz leave 😑Totally bieng serious there😊</h1></font>
 <h2><font color="white"> Welcome bordies here you will learn about me a fellow memeber of your team😎. but letting you know ....</h2></font>
 <h3><font color="white"> This is the 🤪<b>BEST</b>🤪 site ever! only if you didn't already know 😁 Which you should've 😔 </h3></font>
