--- a/student_17/contact.html
+++ b/student_17/contact.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" type="text/css" href="mystyle.css">
   <title>
     Contact
+    <img src = "https://lh3.googleusercontent.com/-UAnF7oloRSw/XFzhMdVdCiI/AAAAAAAAACM/7iUk8egHgqgcZXtJcNU43xT1F6khKNBPQCEwYBhgL/w140-h77-p/youtube%2Bimage.png">
   </title>
 </head>
 <body>
