--- a/student_15/index.html
+++ b/student_15/index.html
@@ -13,8 +13,7 @@
   .column {
   float: left;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
+  height: 300px; 
 .left {
   width: 25%;
 }
