--- a/student_26/contact.html
+++ b/student_26/contact.html
@@ -8,6 +8,14 @@
  </a>
  <h1> The Coding School </h1>
 </header>
+ <nav>
+ <ul>
+ <li><a href = "index.html"> Home </a></li>
+ <li><a href = "about.html"> About Us </a></li>
+ <li><a href = "gallery.html"> Gallery </a></li>
+ <li><a href = "contact.html"> Contact Us </a></li>
+ </ul>
+</nav>
  <form>
 What is your question? <br>
   <select name="topic">
