--- a/student_08/Contact.html
+++ b/student_08/Contact.html
@@ -17,6 +17,43 @@
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
 </nav>
+     <br><br>
+  <br><br>
+<form>
+What is your question? <br>
+  <select name="topic">
+ 
+  <option value="No, i don't want that">
+    Pizza
+    </option>
+  <option value="burrito">
+    Burrito
+  </option>
+  </select><br><br>
+  Full Name <br>
+  <input type="text" name="name"><br>
+  <br>
+  Message <br>
+  <textarea name="message" rows="10" cols="30">
+  </textarea><br>
+  <br>
+
+  
+  <br><br>
+  <input type ="checkbox" name = "subscribe" value = "Subscribe">
+  Please add me to the mailing list!
+  <br><br>
+    When do you want it by?
+  <br>
+  <input type="radio" name = "day" value="mon">MOnday
+  <br>
+   <input type="radio" name="day" value="tue">Tuesday
+  <br>
+   <input type="radio" name="day" value="wed">Wednesday
+  <br>
+  
+  <input type = "submit" value="Submit">
+  </form>
 <footer>
 Created by Me!
 </footer>
