--- a/student_14/index.html
+++ b/student_14/index.html
@@ -1,6 +1,15 @@
 <html>
 <head>
   <link rel = "stylesheet" type="text/css" href= "mystyle.css">
+  <title>Welcome...</title>
+<style type="text/css">
+body{
+border-style: dashed;
+border-width: medium;
+border-color: blue;
+background-color: red;
+  }
+  </style>
 </head>
 <body>
 <header>
