--- a/student_13/about.html
+++ b/student_13/about.html
@@ -36,7 +36,7 @@
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Column 2</h2>
-    <p> And get "advice" on how to be a pro! </p>
+    <p> And get "advice" on how to be a pro! We specilize in Battle Royale! </p>
   </div>
 </div>
 
