--- a/student_14/index.html
+++ b/student_14/index.html
@@ -6,8 +6,8 @@
 body{
 border-style: dashed;
 border-width: medium;
-border-color: blue;
-background-color: red;
+border-color: black;
+background-color: green;
   }
   </style>
 </head>
