--- a/student_19/confirmation.html
+++ b/student_19/confirmation.html
@@ -3,7 +3,10 @@
 <head>
   </head>
 <body>
-<h1> Thank You for the question </h1>
+<h1> Thank You for the Question </h1>
+<p> Thank you for your question. It helps us stay updated with problems and what you need help with you.<p>
+<p>Sincerely,<p>
+<p>Ashsmith Khayrul<p>
   </body>
   </html>
   
