--- a/student_15/about.html
+++ b/student_15/about.html
@@ -62,11 +62,11 @@ This is my favorite video <a href= "http://www.youtube.com/watch?v=HCckoploKxg">
 
 <div class="row">
   <div class="column left" style="background-color:#aaa;">
-    <h2>Column 1</h2>
+    <h2>link</h2>
     <p>https://img.buzzfeed.com/buzzfeed-static/static/2016-12/14/13/asset/buzzfeed-prod-fastlane01/sub-buzz-24232-1481739559-7.jpg</p>
   </div>
   <div class="column right" style="background-color:#bbb;">
-    <h2>Column 2</h2>
+    <h2>Amazing</h2>
     <p>Amazing</p>
   </div>
 </div>
