--- a/student_08/Gallery.html
+++ b/student_08/Gallery.html
@@ -1,24 +1,48 @@
 <html>
+
 <head>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
+  <title> Gallery </title>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
+
 <body>
-<header>
-  <a href = "/">
-    <img src = "picture.png" />
-  </a>
-  <h1> The Coding School </h1>
-</header>
-<nav>
-  <ul>
-    <li><a href = "index.html"> Home </a></li>
-    <li><a href = "about.html"> About Us </a></li>
-    <li><a href = "gallery.html"> Gallery </a></li>
-    <li><a href = "contact.html"> Contact Us </a></li>
+  <div class="header">
+    <a href="example.html">
+    </a>
+    <h1>Gallery</h1>
+
+  </div>
+   <div>
+    <ul class= "nav">
+      
+      <li><a href = "index.html"> Home Page </a></li>
+      <li><a href = "about.html"> About Us </a></li>
+      <li><a href = "gallery.html"> Gallery </a></li>
+      <li><a href = "contact.html"> Contact Us </a></li>
+
+    </ul>
+  </div>
+  <br><br>
+  <br><br>
+
+  <p> Gallery Page!</p>
+<ul class= "products">
+  <li class="product">
+    <div>
+      <h3>
+        <a href = "example.html"> HTML and CSS </a>
+      </h3>
+      <img src="https://www.sololearn.com/Uploads/html-css.jpg"/>
+      <p> HTML and CSS course</p>
+    </div>
+      </li>
+  <li class="product">
+    <div>
+      <h3>Javascript</h3>
+      <img src="https://udemy-images.udemy.com/course/750x422/495484_385c_3.jpg"/>
+      <p> Javascript</p>
+    </div>
+  </li>
   </ul>
-</nav>
-<footer>
-Created by Me!
-</footer>
 </body>
 </html>
