--- a/student_09/home.html
+++ b/student_09/home.html
@@ -12,17 +12,21 @@
 You made it !! this is the hompage. here you will learn all about me!!  
 </h1>
 <br>
+ <br>
 </p2>
 Question 1 : what is your favorite color?
 </p2>
+<br>
 <br>
 <p3>
   Answer : Blue
 </p3>
 <br>
+<br>
 <p4>
 Can you read this ?
 <br>
+ <br>
 7H15 M3554G3
 53RV35 7O PR0V3
 H0W 0UR M1ND5 C4N
@@ -40,7 +44,9 @@ B3 PROUD! 0NLY
 C3R741N P30PL3 C4N
 R3AD 7H15.
 <br>
+  <br>
 A: VV0VV TH1Z RLY 1Z 4M4Z1NG 7 C4N R34D 17 P36F3C7LY
+  got that text from genius.com
 </p4>
 <footer>
 Created by Me!
