--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -93,6 +93,12 @@ h1 {
 }
     </style>
     </head>
+	<ul>
+<li><a href = "index.html"> Home </li> 
+<li><a href = "IbrahimAhmed.html"> About me </li> 
+<li><a href = "gallery.html"> Gallery </li> 
+<li><a href = "contact.html"> Contact Me </li> 
+</ul>
  <font size=5>
 	 <center><h1>About Me</h1></center>
  </font>
