--- a/student_19/confirmation.html
+++ b/student_19/confirmation.html
@@ -7,7 +7,7 @@
 <p> Thank you for your question. It helps us stay updated with problems and what you need help with you.<p>
 <p>Sincerely,<p>
 <p>Ashsmith Khayrul<p>
-<p>Creatoe of the Website<p> 
+<p>Creator of the Website<p> 
   </body>
   </html>
   
