--- a/student_09/home.html
+++ b/student_09/home.html
@@ -24,7 +24,7 @@ Question 1 : what is your favorite color?
 <br>
 <br>
 <p4>
-Can you read this ?
+Question 2: Can you read this ?
 <br>
  <br>
 7H15 M3554G3
@@ -45,9 +45,20 @@ C3R741N P30PL3 C4N
 R3AD 7H15.
 <br>
   <br>
-A: VV0VV TH1Z RLY 1Z 4M4Z1NG 7 C4N R34D 17 P36F3C7LY
-  got that text from genius.com
+Answer: Y3S 7 C4N R34D 17 P36F3C7LY
+ <br>
+  BTW got that text from genius.com
 </p4>
+<p5>
+  <style type="text/css">
+body{
+	border-style: line;
+	border-width: medium;
+	border-color: green;
+	background-color: orange;
+	 }
+</style>
+  </p5>
 <footer>
 Created by Me!
 </footer>
