--- a/student_14/contact.html
+++ b/student_14/contact.html
@@ -1,6 +1,15 @@
 <html>
 <head>
   <link rel = "stylesheet" type="text/css" href= "mystyle.css">
+<title>Waddup...</title>
+<style type="text/css">
+body{
+border-style: dashed;
+border-width: medium;
+border-color: black;
+background-color: green;
+  }
+  </style>
 </head>
 <body>
 <header>
