--- a/student_09/home.html
+++ b/student_09/home.html
@@ -50,6 +50,7 @@ Answer: Y3S 7 C4N R34D 17 P36F3C7LY
 <p5>
   <style type="text/css">
 body{
+	border-style: dashed;
 	border-width: medium;
 	border-color: green;
 	background-color: orange;
