--- a/student_14/gallery.html
+++ b/student_14/gallery.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <link rel = "stylesheet" type="text/css" href= "mystyle.css">
- <title>Welcome...</title>
+ <title>Photos</title>
 <style type="text/css">
 body{
 border-style: dashed;
