--- a/student_24/contact.html
+++ b/student_24/contact.html
@@ -40,10 +40,10 @@ What is your question? <br>
   <select name="topic">
  
   <option value="No, i don't want that">
-    Pizza
+    Fortnite
     </option>
   <option value="burrito">
-    Burrito
+    Apex Legends
   </option>
   </select><br><br>
   Full Name <br>
