--- a/student_24/contact.html
+++ b/student_24/contact.html
@@ -26,7 +26,7 @@
   <div>
     <ul class= "nav">
       
-      <li><a href = "index.html"> Home Page </a></li>
+      <li><a href = "index.html"> Home </a></li>
       <li><a href = "about.html"> About Us </a></li>
       <li><a href = "gallery.html"> Gallery </a></li>
       <li><a href = "contact.html"> Contact Us </a></li>
