--- a/student_26/about.html
+++ b/student_26/about.html
@@ -2,6 +2,14 @@
 <head>
 </head>
 <body>
+ <nav>
+ <ul>
+ <li><a href = "index.html"> Home </a></li>
+ <li><a href = "about.html"> About Us </a></li>
+ <li><a href = "gallery.html"> Gallery </a></li>
+ <li><a href = "contact.html"> Contact Us </a></li>
+ </ul>
+</nav>
  <img src="https://tse1.mm.bing.net/th?id=OIP.Wbizs3hiSYGlF6Tm302LBgHaCS&pid=15.1&P=0&w=558&h=173">
 <img>
 <h2>
