--- a/student_17/contact.html
+++ b/student_17/contact.html
@@ -33,10 +33,10 @@ What is your question? <br>
   <select name="topic">
  
   <option value="phil swifts daily life">
-    Pizza
+    Phil swift's daily life
     </option>
   <option value="why phil swift has no more life">
-    Burrito
+    why phil swif has no more life
   </option>
   </select><br><br>
   Full Name <br>
@@ -52,11 +52,11 @@ What is your question? <br>
   <br><br>
     When do you want it by?
   <br>
-  <input type="radio" name = "day" value="mon">MOnday
+  <input type="radio" name = "day" value="mon">SSunde
   <br>
-   <input type="radio" name="day" value="tue">Tuesday
+   <input type="radio" name="day" value="tue">Monoday
   <br>
-   <input type="radio" name="day" value="wed">Wednesday
+   <input type="radio" name="day" value="wed">Nein
   <br>
   
   <input type = "submit" value="Submit">
