--- a/student_16/Gallery.html
+++ b/student_16/Gallery.html
@@ -19,6 +19,6 @@
   </ul>
   </nav>
   <footer>
-       YEEEEEEEEET!!!
+       YEEEEEEEEET!!!  OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOF!!! 
 </body>
 </html>
