--- a/student_14/about.html
+++ b/student_14/about.html
@@ -24,10 +24,10 @@ background-color: green;
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
   </nav>
-  <p> Hey! I'm Jimmy... That's all I got. Welp, there's nothing to see here, you should leave now... if you're still reading, there's nothing more to see. </p>
+  <p> Hey! I'm Hajime... That's all I got. Welp, there's nothing to see here, you should leave now... if you're still reading, there's nothing more to see. </p>
 <footer>
-Created by Jimmy Inc. 
+Created by Hajime Inc. 
 </footer>
 </body>
-<marquee> Jimmy Inc. Stupid Crap since 2005  </marquee>
+<marquee> Hajime Inc. Stupid Crap since 2005  </marquee>
 </html>
